Fix for text overflow in conversation history

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -198,9 +198,11 @@ body {
 }
 
 .chat-entry-text-content {
-	overflow: hidden; 
+	width: 70%;
+	overflow: hidden;
 	text-overflow: ellipsis;
 	display: block; 
+	
 	white-space: nowrap;
 }
 
@@ -244,7 +246,8 @@ body {
 }
 
 .badge {
-	margin-left: 5px;
+	position: relative;
+	right: 10px;
 	
     -webkit-animation-name: blinker;
     -webkit-animation-duration: 3s;
@@ -385,7 +388,7 @@ span[ng-click][disabled] {
 	background: #252379 !important;
 }
 
-.uninett-chatbox-entry-recv-color1 { background: red; }
+.uninett-chatbox-entry-recv-color1 { background: #337db1; }
 .uninett-chatbox-entry-recv-color2 { background: blue; }
 .uninett-chatbox-entry-recv-color3 { background: purple; }
 .uninett-chatbox-entry-recv-color4 { background: yellow; }
